include/epanet2.h

/********************************************************************

    Project Functions

********************************************************************/

  int  DLLEXPORT ENepanet(const char *inpFile, const char *rptFile,
                 const char *outFile, void (*pviewprog) (char *));
  int  DLLEXPORT ENinit(const char *rptFile, const char *outFile,
                 int unitsType, int headlossType);
  int  DLLEXPORT ENopen(const char *inpFile, const char *rptFile,
                 const char *outFile);
  
  int  DLLEXPORT ENgettitle(char *line1, char *line2, char *line3);
  
  int  DLLEXPORT ENsettitle(char *line1, char *line2, char *line3);
  int  DLLEXPORT ENgetcomment(int object, int index, char *comment);
  int  DLLEXPORT ENsetcomment(int object, int index, char *comment);
  int  DLLEXPORT ENgetcount(int object, int *count);
  int  DLLEXPORT ENsaveinpfile(const char *filename);
  int  DLLEXPORT ENclose();
/********************************************************************

    Hydraulic Analysis Functions

********************************************************************/

  int  DLLEXPORT ENsolveH();
  int  DLLEXPORT ENsaveH();
  int  DLLEXPORT ENopenH();
  int  DLLEXPORT ENinitH(int initFlag);
  int  DLLEXPORT ENrunH(long *currentTime);
  int  DLLEXPORT ENnextH(long *tStep);
  int  DLLEXPORT ENcloseH();
  int  DLLEXPORT ENsavehydfile(char *filename);
  int  DLLEXPORT ENusehydfile(char *filename);
/********************************************************************

    Water Quality Analysis Functions

********************************************************************/

  int  DLLEXPORT ENsolveQ();
  int  DLLEXPORT ENopenQ();
  int  DLLEXPORT ENinitQ(int saveFlag);
  int  DLLEXPORT ENrunQ(long *currentTime);
  int  DLLEXPORT ENnextQ(long *tStep);
  int  DLLEXPORT ENstepQ(long *timeLeft);
  int  DLLEXPORT ENcloseQ();
/********************************************************************

    Reporting Functions

********************************************************************/

  int  DLLEXPORT ENwriteline(char *line);
  int  DLLEXPORT ENreport();
  int  DLLEXPORT ENcopyreport(char *filename);
  int  DLLEXPORT ENclearreport();
  int  DLLEXPORT ENresetreport();
  int  DLLEXPORT ENsetreport(char *format);
  int  DLLEXPORT ENsetstatusreport(int level);
  int  DLLEXPORT ENgetversion(int *version);
  int  DLLEXPORT ENgeterror(int errcode, char *errmsg, int maxLen);
  int  DLLEXPORT ENgetstatistic(int type, EN_API_FLOAT_TYPE* value);
  
  int  DLLEXPORT ENgetresultindex(int type, int index, int *value);
/********************************************************************

    Analysis Options Functions

********************************************************************/

  int  DLLEXPORT ENgetoption(int option, EN_API_FLOAT_TYPE *value);
  int  DLLEXPORT ENsetoption(int option, EN_API_FLOAT_TYPE value);
  int  DLLEXPORT ENgetflowunits(int *units);
  int  DLLEXPORT ENsetflowunits(int units);
  int  DLLEXPORT ENgettimeparam(int param, long *value);
  int  DLLEXPORT ENsettimeparam(int param, long value);
  int  DLLEXPORT ENgetqualinfo(int *qualType, char *chemName, char *chemUnits,
                 int *traceNode);
  int  DLLEXPORT ENgetqualtype(int *qualType, int *traceNode);
  int  DLLEXPORT ENsetqualtype(int qualType, char *chemName, char *chemUnits,
                 char *traceNode);
/********************************************************************

    Node Functions

********************************************************************/

   int DLLEXPORT ENaddnode(char *id, int nodeType, int *index);
   int DLLEXPORT ENdeletenode(int index, int actionCode);
   int DLLEXPORT ENgetnodeindex(char *id, int *index);
   int DLLEXPORT ENgetnodeid(int index, char *id);
   int DLLEXPORT ENsetnodeid(int index, char *newid);
   int DLLEXPORT ENgetnodetype(int index, int *nodeType);
   int DLLEXPORT ENgetnodevalue(int index, int property, EN_API_FLOAT_TYPE *value);
   int DLLEXPORT ENsetnodevalue(int index, int property, EN_API_FLOAT_TYPE value);
   int DLLEXPORT ENsetjuncdata(int index, EN_API_FLOAT_TYPE elev,
                 EN_API_FLOAT_TYPE dmnd, char *dmndpat);
  int  DLLEXPORT ENsettankdata(int index, EN_API_FLOAT_TYPE elev,
                 EN_API_FLOAT_TYPE initlvl, EN_API_FLOAT_TYPE minlvl,
                 EN_API_FLOAT_TYPE maxlvl, EN_API_FLOAT_TYPE diam,
                 EN_API_FLOAT_TYPE minvol, char *volcurve);
  int  DLLEXPORT ENgetcoord(int index, double *x, double *y);
  int  DLLEXPORT ENsetcoord(int index, double x, double y);